<resources>
    <string name="app_name">INSY7315_POE_P1_V1</string>

    <!-- Home Page (Tenant) -->
    <!-- Labels -->
    <string name="rent_status">Rent Status</string>
    <string name="rent_paid_overdue">Paid/Overdue</string>
    <string name="rent_amount">Amount</string>
    <string name="next_payment_date">Next Payment Date</string>
    <string name="maintenance_requests">Maintenance Requests</string>
    <string name="requests_open">Number of requests open:</string>

    <!-- Maintenance Request (Tenant) -->
    <!-- Buttons -->
    <string name="btn_back">Back</string>
    <string name="btn_submit_request">Submit Request</string>

    <!-- Titles -->
    <string name="maintenance_request_title">Maintenance Request</string>

    <!-- Labels -->
    <string name="maintenance_location_label">Maintenance Location:</string>
    <string name="concern_label">Concern:</string>
    <string name="appliances_label">If the repair relates to appliances, list them below:</string>
    <string name="preferred_time_date_label">Preferred Time and Date:</string>

    <!-- Hints -->
    <string name="hint_block_unit_number">Block and Unit Number</string>
    <string name="hint_concern">Describe your issue</string>
    <string name="hint_appliances">Appliances</string>
    <string name="hint_time">Time here</string>
    <string name="hint_date">Date here</string>

    <!-- Maintenance History (Tenant) -->
    <!-- Titles -->
    <string name="maintenance_requests_title">Maintenance Requests</string>

    <!-- Buttons -->
    <string name="btn_make_request">Make Request</string>

    <!-- Table Headers -->
    <string name="table_header_issue">Issue</string>
    <string name="table_header_status">Status</string>
    <string name="table_header_report_date">Report Date</string>

    <!-- Make Payment (Tenant) -->
    <!-- Buttons -->
    <!-- Back button already in use -->
    <string name="btn_make_payment">Make Payment</string>

    <!-- Titles -->
    <string name="make_payment_title">Make Payment</string>

    <!-- Labels -->
    <string name="card_holder_name_label">Card Holder Name</string>
    <string name="card_number_label">Card Number</string>
    <string name="expiry_date_label">Expiry Date</string>
    <string name="cvv_label">CVV</string>

    <!-- Hints -->
    <string name="hint_card_holder_name">Name on card here</string>
    <string name="hint_card_number">Card number here</string>
    <string name="hint_expiry_date">Date here</string>
    <string name="hint_cvv">CVV here</string>

    <!-- Messages -->
    <!-- Hints -->
    <string name="hint_type_message">Type a message</string>

    <!-- Buttons -->
    <string name="btn_send">Send</string>

    <!-- Payment History (Tenant) -->
    <!-- Titles -->
    <string name="payment_history_title">Payment History</string>

    <!-- Buttons -->
    <string name="btn_go_to_make_payment">Make a payment</string>

    <!-- Table Headers -->
    <string name="table_header_amount">Amount</string>
    <!-- Status was already defined earlier name="table_header_status" -->
    <string name="table_header_payment_date">Payment Date</string>

    <!-- Profile -->
    <!-- Buttons -->
    <string name="btn_settings">Settings</string>
    <string name="btn_lease">My Lease</string>

    <!-- Settings -->
    <!-- Titles -->
    <string name="settings_title">Settings</string>

    <!-- Buttons -->
    <!-- Back Btn already exists -->
    <string name="btn_save_language">Save Language</string>

    <!-- Switches -->
    <string name="switch_dark_mode">Dark Mode</string>

    <!-- Labels -->
    <string name="label_language">Language</string>

    <!-- Signup & Login -->
    <!-- Titles -->
    <string name="signup_title">Signup</string>
    <string name="login_title">Login</string>

    <!-- Labels -->
    <string name="label_first_name">First Name:</string>
    <string name="label_surname">Surname:</string>
    <string name="label_phone_number">Phone Number:</string>
    <string name="label_email">Email:</string>
    <string name="label_password">Password:</string>
    <string name="label_already_have_account">Already have an account?</string>
    <string name="label_dont_have_account">Don\'t have an account?</string>"

    <!-- Hints -->
    <string name="hint_first_name">First Name Here</string>
    <string name="hint_surname">Surname Here</string>
    <string name="hint_phone_number">Phone Number Here</string>
    <string name="hint_email">Email Here</string>
    <string name="hint_password">Password Here</string>

    <!-- Buttons -->
    <string name="btn_signup">Signup</string>

    <!-- Caretaker -->
    <string name="tasks_title">Tasks</string>
    <string name="header_fix_date">Fix Date</string>
    <string name="header_unit">Unit</string>

    <!-- Property Listing -->
    <string name="header_property_overview">Property Overview</string>
    <string name="text_filter_search">Type here to filter and search…</string>

    <!-- Admin Home -->
    <string name="smAiEscalations">AI Escalations</string>
    <string name="smCommunication">Communication</string>
    <string name="smDashboard">Dashboard</string>
    <string name="smReports">Generate Report</string>
    <string name="smManageUsers">Manage Users</string>
    <string name="smProfile">Profile</string>

    <!-- Manager Home -->
    <string name="smLeaseOverview">AI Escalations</string>
    <string name="smMainDashboard">Main Dashboard</string>
    <string name="smMaintenanceDashboard">Maintenance Dashboard</string>
    <string name="smPropertyListings">Property Listings</string>

    <!-- Admin Create Report -->
    <string name="text_generate_report">Generate Report</string>
    <string name="text_month_select">Select the month and year for the report:</string>
    <string name="text_year">Year</string>
    <string name="text_month">Month</string>
    <string name="btn_generate_report">Generate Report</string>

    <!-- All Profile -->
    <string name="btn_property_listings">Property Listings</string>

    <!-- Manager Dashboard -->
    <string name="title_dashboard">Dashboard</string>
    <string name="text_menu_swipe">Swipe from the left to show the menu</string>
    <string name="text_tenants">Tenants:</string>
    <string name="text_properties">Properties:</string>
    <string name="text_occupancy">Occupancy:</string>
    <string name="text_leases_expiring_soon">Leases Expiring Soon:</string>
    <string name="text_rent_collected">Rent Collected:</string>
    <string name="text_outstanding_rent">Outstanding Rent:</string>
    <string name="text_active_maintenance_requests">Active Maintenance Requests:</string>

    <!-- Manager Lease Overview -->
    <string name="title_lease_overview">Lease Overview</string>
    <string name="text_column_filter_search">Tap on a column header to sort by that column</string>
    <string name="header_tenant">Tenant</string>
    <string name="header_lease_start">Lease Start</string>
    <string name="header_lease_end">Lease End</string>
    <string name="header_rent_amount">Rent Amount</string>

    <!-- Manager Maintenance Tasks -->
    <string name="header_reported_date">Reported Date</string>

    <!-- Admin Manage Users -->
    <string name="header_manager_users">Manage Users</string>
    <string name="text_add_user">Add User</string>
    <string name="text_search">Search…</string>
    <string name="header_name">Name</string>
    <string name="header_email">Email</string>
    <string name="header_role">Role</string>
    <string name="header_located">Located</string>
    <string name="header_status">Status</string>

    <!-- Admin AI Escalations -->
    <string name="title_ai_escalations">AI Escalations</string>
    <string name="text_id">ID</string>
    <string name="text_date">Date</string>
    <string name="text_source">Source</string>
    <string name="text_property">Property</string>
    <string name="text_category">Category</string>
    <string name="text_status">Status</string>
    <string name="text_priority">Priority</string>
</resources>