<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="end"
                android:text="@string/btn_back" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/make_payment_title"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/card_holder_name_label"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/etCardHolderName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/hint_card_holder_name" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/card_number_label"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/etCardNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/hint_card_number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/expiry_date_label"
                        android:textSize="15sp"/>

                    <EditText
                        android:id="@+id/etExpiryDate"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:ems="10"
                        android:inputType="date"
                        android:hint="@string/hint_expiry_date"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cvv_label"
                        android:textSize="15sp"/>

                    <EditText
                        android:id="@+id/etCVV"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:ems="10"
                        android:inputType="number"
                        android:hint="@string/hint_cvv"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnMakePayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="50dp"
                android:text="@string/btn_make_payment" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>