<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_Home">

    <!-- Main content -->
    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Fragment container -->
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fitsSystemWindows="true"
            />
    </LinearLayout>

    <!-- Drawer menu -->
    <LinearLayout
        android:id="@+id/menuLayout"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/drawerBackground"
        android:padding="16dp"
        android:layout_gravity="start">

        <TextView
            android:id="@+id/smAiEscalations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smAiEscalations"
            android:textColor="@color/drawerText"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/smCommunication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smCommunication"
            android:textColor="@color/drawerText"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/smDashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smDashboard"
            android:textColor="@color/drawerText"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/smReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smReports"
            android:textColor="@color/drawerText"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/smManageUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smManageUsers"
            android:textColor="@color/drawerText"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/smProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smProfile"
            android:textColor="@color/drawerText"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:padding="8dp"/>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
