<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorAccent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/header_manager_users"
                android:textSize="20sp"
                android:gravity="center" />

            <Button
                android:id="@+id/btnAddUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_gravity="center"
                android:text="@string/text_add_user" />

            <EditText
                android:id="@+id/etFilterSearch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="10dp"
                android:ems="10"
                android:hint="@string/text_search"
                android:inputType="text" />

            <LinearLayout
                android:id="@+id/tableContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <!-- Table Header -->
                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?attr/colorSecondary"
                                android:orientation="horizontal"
                                android:padding="8dp">

                                <TextView
                                    android:layout_width="65dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/header_name" />

                                <TextView
                                    android:layout_width="200dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/header_email" />

                                <TextView
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/header_role" />

                                <TextView
                                    android:layout_width="125dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/header_located" />

                                <TextView
                                    android:layout_width="125dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/header_status" />
                            </LinearLayout>

                            <ScrollView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <androidx.recyclerview.widget.RecyclerView
                                        android:id="@+id/taskAdminManageUsersRecyclerView"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent" />

                                </LinearLayout>
                            </ScrollView>
                        </LinearLayout>
                    </HorizontalScrollView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
